; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lvm.c_copy2buff.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lvm.c_copy2buff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i8*)* @copy2buff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy2buff(i64 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i64 0, i64* %7, align 8
  br label %9

9:                                                ; preds = %29, %3
  %10 = load i64, i64* %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = sub nsw i64 %10, %12
  %14 = call i64 @vslen(i64 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i64, i64* %7, align 8
  %17 = getelementptr inbounds i8, i8* %15, i64 %16
  %18 = load i64, i64* %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = sub nsw i64 %18, %20
  %22 = call i32 @svalue(i64 %21)
  %23 = load i64, i64* %8, align 8
  %24 = mul i64 %23, 1
  %25 = call i32 @memcpy(i8* %17, i32 %22, i64 %24)
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* %7, align 8
  %28 = add i64 %27, %26
  store i64 %28, i64* %7, align 8
  br label %29

29:                                               ; preds = %9
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, -1
  store i32 %31, i32* %5, align 4
  %32 = icmp sgt i32 %31, 0
  br i1 %32, label %9, label %33

33:                                               ; preds = %29
  ret void
}

declare dso_local i64 @vslen(i64) #1

declare dso_local i32 @memcpy(i8*, i32, i64) #1

declare dso_local i32 @svalue(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
